changed some routes to use GET instead of POST
