# src/routes/api/mod.rs
@@ -1,17 +1,18 @@
 pub mod messages;
-pub mod names;
+pub mod alias;
 pub mod register;
 
-use axum::routing::{post};
-use axum::{Router};
+use axum::routing::post;
+use axum::routing::get;
+use axum::Router;
 use sqlx::PgPool;
 
 
 pub fn router() -> Router<PgPool> {
     Router::new()
-        .route("/namesearch", post(names::name_search))
-        .route("/namefetch", post(names::get_key))
+        .route("/search/:alias", get(alias::search_alias))
+        .route("/registry/:alias", get(alias::fetch_alias))
         .route("/register", post(register::register))
         .route("/publish", post(messages::publish_message))
-        .route("/messages", post(messages::get_messages))
+        .route("/messages", get(messages::get_messages))
 }
